// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LogBoxMessage Should strip "TransformError " without breaking substitution 1`] = `
<React.Fragment>
  <Text>
    normal 
  </Text>
  <Text
    style={Object {}}
  >
    substitution
  </Text>
  <Text>
     normal
  </Text>
</React.Fragment>
`;

exports[`LogBoxMessage Should strip "Warning: " without breaking substitution 1`] = `
<React.Fragment>
  <Text>
    normal 
  </Text>
  <Text
    style={Object {}}
  >
    substitution
  </Text>
  <Text>
     normal
  </Text>
</React.Fragment>
`;

exports[`LogBoxMessage Should strip "Warning: Warning: " without breaking substitution 1`] = `
<React.Fragment>
  <Text>
    normal 
  </Text>
  <Text
    style={Object {}}
  >
    substitution
  </Text>
  <Text>
     normal
  </Text>
</React.Fragment>
`;

exports[`LogBoxMessage should render a plaintext message and clean the content 1`] = `
<Text>
  This should not start with Error:
</Text>
`;

exports[`LogBoxMessage should render a plaintext message with no substitutions 1`] = `
<Text>
  normal substitution normal
</Text>
`;

exports[`LogBoxMessage should render message 1`] = `
<React.Fragment>
  <Text>
    Some kind of message
  </Text>
</React.Fragment>
`;

exports[`LogBoxMessage should render message truncated to 6 chars 1`] = `
<React.Fragment>
  <Text>
    Some 
  </Text>
</React.Fragment>
`;

exports[`LogBoxMessage should render message with substitution 1`] = `
<React.Fragment>
  <Text>
    normal 
  </Text>
  <Text
    style={Object {}}
  >
    substitution
  </Text>
  <Text>
     normal
  </Text>
</React.Fragment>
`;

exports[`LogBoxMessage should render message with substitution, truncating the first word 3 letters in 1`] = `
<React.Fragment>
  <Text>
    nor
  </Text>
</React.Fragment>
`;

exports[`LogBoxMessage should render message with substitution, truncating the second word 6 letters in 1`] = `
<React.Fragment>
  <Text>
    normal 
  </Text>
  <Text
    style={Object {}}
  >
    substi
  </Text>
</React.Fragment>
`;

exports[`LogBoxMessage should render message with substitution, truncating the third word 2 letters in 1`] = `
<React.Fragment>
  <Text>
    normal 
  </Text>
  <Text
    style={Object {}}
  >
    substitution
  </Text>
  <Text>
     no
  </Text>
</React.Fragment>
`;

exports[`LogBoxMessage should render the whole message when maxLength = message length 1`] = `
<React.Fragment>
  <Text>
    Some kind of message
  </Text>
</React.Fragment>
`;

exports[`LogBoxMessage should render the whole message with substitutions when maxLength = message length 1`] = `
<React.Fragment>
  <Text>
    normal 
  </Text>
  <Text
    style={Object {}}
  >
    substitution
  </Text>
  <Text>
     normal
  </Text>
</React.Fragment>
`;
